@@ -12,6 +12,7 @@ version <next>:
 - showvolume filter
 - Many improvements to the JPEG 2000 decoder
 - Go2Meeting decoding support
+- adrawgraph audio and drawgraph video filter
 
 
 version 2.7:
